package locations;

public interface Locatable {
    String getPlace();
    void setType(Places type);
    Places getType();
}
