package personalities;

public interface Humanable {
    String getName();
    int getAge();
    void addSkill(Skills skills);
}
